--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,5 +1,6 @@
-<h3>Hi</h3>
+<h3>Current Questions: </h3>
 
 {{#each model as |question|}}
-  <p>{{question.content}}, post by: {{question.author}}</p>
+  {{#link-to 'question' question.id}}<p>{{question.content}}</p>{{/link-to}} 
+  <p>post by: {{question.author}}</p>
 {{/each}}
