--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,8 @@
 <h3>Current Questions: </h3>
 
+{{new-question addQuestion='addQuestion'}}
+
 {{#each model as |question|}}
-  {{#link-to 'question' question.id}}<p>{{question.content}}</p>{{/link-to}} 
+  {{#link-to 'question' question.id}}<p>{{question.content}}</p>{{/link-to}}
   <p>post by: {{question.author}}</p>
 {{/each}}
