--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,3 +1,5 @@
-<h4>{{model.content}}</h4>
+<h3>{{model.content}}</h3>
 <p>Asked by: {{model.author}}</p>
 <p>Additional notes: {{model.additionalNotes}}</p>
+
+<h4>Answers:</h4>
