add answer new-answer component linked to question route with save functionality

--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -4,6 +4,8 @@
 
 <h4>Answers:</h4>
 
+{{new-answer addAnswer='addAnswer'}}
+
 {{#each model.answers as |answer|}}
   <p>User: {{answer.author}}</p>
   <p>{{answer.content}}</p>
