create 1:many relationship between question (one) and answers (many)

--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -4,9 +4,9 @@
 
 <h4>Answers:</h4>
 
-{{new-answer addAnswer='addAnswer'}}
+{{new-answer addAnswer='addAnswer' question=model.question}}
 
-{{#each model.answers as |answer|}}
+{{#each model.question.answers as |answer|}}
   <p>User: {{answer.author}}</p>
   <p>{{answer.content}}</p>
 {{/each}}
