--- a/app/templates/components/new-answer.hbs
+++ b/app/templates/components/new-answer.hbs
@@ -7,7 +7,7 @@
 
     <div class='form-group'>
       <label for='content'>Answer: </label>
-      {{input value=content id='content'}}
+      {{textarea value=content id='content'}}
     </div>
 
     <button class='btn btn-primary' {{action 'addAnswer'}}>Post Answer</button>
