add bootstrap, navbar, form, and index.hbs styling in app.css

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,8 +1,12 @@
-<div class='navbar'>
+<div class='well'>
   <h3>Developer Message Board</h3>
   {{#link-to 'index'}}Home{{/link-to}}
 </div>
 
 <div class='container'>
-  {{outlet}}
+  <div class='row'>
+    <div class='col-md-12'>
+      {{outlet}}
+    </div>
+  </div>
 </div>
