--- a/app/templates/components/new-answer.hbs
+++ b/app/templates/components/new-answer.hbs
@@ -6,7 +6,7 @@
     </div>
 
     <div class='form-group'>
-      <label for='content'>Answer: </label>
+      <label for='content'>Answer: </label><br>
       {{textarea value=content id='content'}}
     </div>
 
