--- a/app/templates/components/new-question.hbs
+++ b/app/templates/components/new-question.hbs
@@ -11,7 +11,7 @@
     </div>
 
     <div class='form-group'>
-      <label for='additionalNotes'>Additional Information: </label>
+      <label for='additionalNotes'>Additional Information: </label><br>
       {{textarea value=additionalNotes id='additionalNotes'}}
     </div>
 
